lore-parser/src/snapshots/lore_parser__validator__tests__normalize_aliases_on_attr.snap
---
source: lore-parser/src/validator.rs
expression: snapshot

---

input:
    
        prefix spotify:attr as @spotifyAttributes
        attr @spotifyAttributes/name
        

output:

Ok(
    Structure {
        kinds: [],
        attributes: [
            Attribute {
                name: Name {
                    alias: None,
                    uri: URI(
                        "spotify:attr/name",
                    ),
                },
            },
        ],
        relations: [],
    },
)

