lore-parser/src/snapshots/lore_parser__validator__tests__normalize_aliases_on_kind.snap
---
source: lore-parser/src/validator.rs
expression: snapshot

---

input:
    
        prefix spotify:kind:artist as @Artist
        kind @Artist
        

output:

Ok(
    Structure {
        kinds: [
            Kind {
                name: Name {
                    alias: None,
                    uri: URI(
                        "spotify:kind:artist",
                    ),
                },
            },
        ],
        attributes: [],
        relations: [],
    },
)

