lore-parser/src/snapshots/lore_parser__validator__tests__validate_aliasing.snap
---
source: lore-parser/src/validator.rs
expression: snapshot

---

input:
     use spotify:artist:2Hkut4rAAyrQxRdof7FVJq as Rush 

output:

Ok(
    Structure {
        kinds: [],
        attributes: [],
        relations: [],
    },
)

