lore-parser/src/snapshots/lore_parser__validator__tests__validate_missing_alias_on_attr.snap
---
source: lore-parser/src/validator.rs
expression: snapshot

---

input:
    attr Role

output:

Err(
    ValidationError {
        filename: "$name",
        error: UnresolvedNames(
            [
                Name {
                    alias: Some(
                        "Role",
                    ),
                    uri: URI(
                        "lore:uri:unresolved",
                    ),
                },
            ],
        ),
    },
)

